--- a/static/test/index.css
+++ b/static/test/index.css
@@ -1,142 +1,152 @@
+:root {
+	--primary: #ff6961;
+	--secondary: #5bc0eb;
+	/* --tertiary: ###; */
+	--black: #000000;
+	--white: #ffffff;
+}
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	text-decoration: none;
 	list-style: none;
-	font-family: "Open Sans", sans-serif;
-	/* 	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-		Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol"; */
 }
 
 body {
-	display: flex;
-	height: 100vh;
-	background-color: #3b404e;
-	align-items: center;
-	justify-content: center;
-	text-align: center;
-}
-
-.container {
-	display: grid;
-	width: 85%;
-	grid-template-columns: 1fr 1fr;
-	grid-template-rows: 350px;
-	grid-gap: 5%;
-}
-
-.menu a {
-	/* display: flex; */
-	align-items: center;
-	align-content: center;
-	/* margin: 30px; */
-	/* padding: 12px 60px; */
-	color: #f1f1f1;
-	/* text-transform: uppercase; */
-	font-size: 18px;
-	font-weight: 600;
-	transition: 0.3s linear;
-}
-
-.menu a:hover {
-	color: #111;
-}
-
-.lean {
-	width: auto;
-	max-height: 100%;
-}
-
-.item {
-	/* background-color: #1eaafc; */
-	background-image: linear-gradient(110deg, #667eea 0%, #764ba2 100%);
-	box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
-	color: #ffffffe6;
-	border-radius: 8px;
-	border: 3px solid #aaaaaa;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	font-size: 18px;
-	font-weight: bold;
-	color: white;
-}
-
-.footer {
-	width: 100vw;
-	display: block;
-	overflow: hidden;
-	padding: 70px 0;
-	box-sizing: border-box;
-	background-color: #18181a;
-}
-
-.inner_footer {
-	display: block;
-	margin: 0 auto;
-	width: 1100px;
-	height: 100%;
-}
-
-.inner_footer .logo_container {
-	width: 35%;
-	float: left;
-	height: 100%;
-	display: block;
-}
-
-.inner_footer .footer_third{
-	width: calc(21.666666666% - 20px);
-	margin-right: 10px;
-	float: left;
-	height: 100%;
-}
-
-.inner_footer .footer_third:last-child{
-	margin-right: 0;
-}
-
-.inner_footer .footer_third h1{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 22px;
-	color: white;
-	display: block;
-	width: 100%;
-	margin-bottom: 20px;
-}
-
-.inner_footer .footer_third a{
-	font-family: Arial, Helvetica, sans-serif;
-	font-size: 18px;
-	color: white;
-	display: block;
-	font-weight: 200;
-	width: 100%;
-	padding-bottom: 5px;
-}
-
-.inner_footer .footer_third li{
-	display: inline-block;
-	padding: 0 5px;
-	font-size: 20px;
-}
-
-.inner_footer .footer_third span{
-	color: white;
-	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
-	font-family: 200;
-	display: block;
-	width: 100%;
-	padding-top: 20px;
+	font-family: sans-serif;
+	line-height: 1.5rem;
 }
 
+head {
+	width: 100%;
+	height: 100vh;
+	background-image: linear-gradient(to left, #fff, #b57474);
+}
 
-@media screen and (max-width: 800px) {
-	.container {
-		grid-template-columns: 1fr;
-		grid-template-rows: 1fr 1fr;
-		grid-gap: 10%;
-	}
+nav {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	padding: 20px 80px;
+	font-size: 18px;
+	color: var(--secondary);
+	width: 100%;
+}
+
+.navbrand {
+	display: flex;
+	align-items: center;
+	font-weight: 600;
+}
+
+.navbrand img {
+	width: 50px;
+	margin-right: 5px;
+}
+
+.nav-items {
+	margin-left: auto;
+}
+
+.nav-items ul li {
+	display: inline-block;
+	margin: 0 20px;
+	font-weight: bold;
+}
+
+.nav-items ul li a {
+	text-decoration: none;
+	color: var(--secondary);
+}
+
+.nav-items ul li a:hover {
+	color: var(--primary);
+	backface-visibility: hidden;
+	font-weight: bold;
+	position: relative;
+}
+
+.nav-items ul li a:hover::after {
+	content: "";
+	width: 8px;
+	height: 8px;
+	position: absolute;
+	top: 100%;
+	left: 50%;
+	border-radius: 50%;
+	background-color: var(--primary);
+	transition: 0.5s ease;
+}
+
+.btn {
+	border: 3px solid var(--primary);
+	padding: 10px 25px;
+	border-radius: 100px;
+	font-weight: 700;
+	background-color: #fff;
+	cursor: pointer;
+	color: var(--primary);
+}
+
+.btn:hover {
+	background-color: var(--primary);
+	color: #fff;
+}
+
+.head-page {
+	width: 100%;
+	display: grid;
+	height: 85vh;
+	grid-template-columns: 1fr 1.2fr;
+	align-items: center;
+}
+
+.text {
+	padding-left: 80px;
+	line-height: 2rem;
+	align-items: center;
+}
+
+.text h4 {
+	font-weight: 800;
+	color: var(--primary);
+	font-size: 25px;
+}
+
+.text h1 {
+	font-weight: bold;
+	color: var(--secondary);
+	font-size: 40px;
+	text-transform: capitalize;
+	letter-spacing: 2px;
+	line-height: 3rem;
+}
+
+.text p {
+	font-weight: 500;
+	font-size: 20px;
+	color: #333;
+	margin: 5px 0;
+	text-align: justify;
+}
+
+.text button {
+	border: none;
+	background-color: var(--primary);
+	color: #fff;
+	padding: 15px 30px;
+	font-size: 18px;
+	margin: 30px;
+	cursor: pointer;
+	border-radius: 100px;
+}
+
+.text button:hover {
+	background-color: rgb(201, 49, 44);
+}
+
+.head-img {
+	width: 100%;
 }
