--- a/static/test/index.css
+++ b/static/test/index.css
@@ -1,9 +1,10 @@
 :root {
 	--primary: #ff6961;
 	--secondary: #5bc0eb;
-	/* --tertiary: ###; */
-	--black: #000000;
-	--white: #ffffff;
+	--tertiary: #ffd670;
+	--black: #000;
+	--white: #fff;
+	--transition: 0.333s ease;
 }
 
 * {
@@ -11,6 +12,7 @@
 	padding: 0;
 	box-sizing: border-box;
 	list-style: none;
+	text-decoration: none;
 }
 
 body {
@@ -22,7 +24,7 @@ body {
 head {
 	width: 100%;
 	height: 100vh;
-	background-image: linear-gradient(to left, #fff, #b57474);
+	background-image: linear-gradient(to left, var(--white), #b57474);
 }
 
 nav {
@@ -39,6 +41,7 @@ nav {
 	display: flex;
 	align-items: center;
 	font-weight: 600;
+	color: var(--secondary);
 }
 
 .navbrand img {
@@ -59,6 +62,7 @@ nav {
 .nav-items ul li a {
 	text-decoration: none;
 	color: var(--secondary);
+	transition: var(--transition);
 }
 
 .nav-items ul li a:hover {
@@ -85,14 +89,15 @@ nav {
 	padding: 10px 25px;
 	border-radius: 100px;
 	font-weight: 700;
-	background-color: #fff;
+	background-color: var(--white);
 	cursor: pointer;
 	color: var(--primary);
+	transition: var(--transition);
 }
 
 .btn:hover {
 	background-color: var(--primary);
-	color: #fff;
+	color: var(--white);
 }
 
 .head-page {
@@ -135,12 +140,13 @@ nav {
 .text button {
 	border: none;
 	background-color: var(--primary);
-	color: #fff;
+	color: var(--white);
 	padding: 15px 30px;
 	font-size: 18px;
-	margin: 30px;
+	margin: 30px 0px;
 	cursor: pointer;
 	border-radius: 100px;
+	transition: var(--transition);
 }
 
 .text button:hover {
